updated and mostly functional

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ flutter:
     - assets/africa.png
     - assets/africa_fossils.png
     - assets/africa_rocks.png
+    - assets/africa_glaciers.png
     - assets/north_america.png
     - assets/north_america_rocks.png
     - assets/eurasia.png
